# django-hattori

./: CONTRIBUTING.md  Makefile  README.md  mypy.ini  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: close-old-issues.yml  docs.yml  test.yml  test_full.yml
docs/: mkdocs.yml
docs/docs/: extra.css  help.md  index.md  motivation.md  releases.md
docs/docs/guides/: api-docs.md  async-support.md  authentication.md  decorators.md  errors.md  routers.md  schema.md  testing.md  urls.md  versioning.md
docs/docs/reference/: api.md  csrf.md  management-commands.md  operations-parameters.md  settings.md
docs/docs/tutorial/: index.md  step2.md  step3.md
docs/src/: index001.py
hattori/: __init__.py  conf.py  constants.py  decorators.py  errors.py  files.py  filter_schema.py  http_errors.py  main.py  operation.py  patch_dict.py  renderers.py  responses.py  router.py  schema.py  streaming.py  types.py  utils.py
hattori/compatibility/: files.py  util.py
hattori/management/: utils.py
hattori/management/commands/: export_openapi_schema.py
hattori/openapi/: __init__.py  docs.py  schema.py  urls.py  views.py
hattori/params/: __init__.py  functions.py  models.py
hattori/security/: __init__.py  apikey.py  base.py  http.py  session.py
hattori/signature/: __init__.py  details.py  utils.py
hattori/templates/hattori/: favicons.html  redoc.html  redoc_cdn.html  swagger.html  swagger_cdn.html
hattori/testing/: __init__.py  client.py
tests/: conftest.py  main.py  mypy_apireturn.py  mypy_test.py  test_add_decorator.py  test_add_decorator_async.py  test_alias.py  test_annotated.py  test_api_error.py  test_api_instance.py  test_api_return.py  test_app.py  test_async.py  test_atomic_requests.py  test_auth.py  test_auth_async.py  test_auth_global.py  test_auth_inheritance_routers.py  test_auth_return_types.py  test_auth_routers.py  test_body.py  test_csrf.py  test_csrf_async.py  test_decorators.py  test_discriminator.py  test_empty_multipart_body.py  test_enum.py  test_errors.py  test_exceptions.py  test_export_openapi_schema.py  test_falsy_inherit_bug.py  test_files.py  test_filter_schema.py  test_forms.py  test_forms_and_files.py  test_http_errors.py  test_inheritance_routers.py  test_lists.py  test_misc.py  test_models.py  (+35 more)
tests/demo_project/demo/: settings.py  urls.py
tests/demo_project/multi_param/: api.py  urls.py
tests/demo_project/someapp/: api.py
tests/test_docs/: test_auth.py  test_body.py  test_form.py  test_index.py  test_path.py  test_query.py
tests/test_with_django/: test_multi_param_parsing.py
tests/test_with_django/schema_fixtures/: test-multi-body-file.json  test-multi-body-form-file.json  test-multi-body-form.json  test-multi-body.json  test-multi-cookie.json  (+7 more)
(+36 files in other folders)
